Bug 1261425 - coalesce mutation events by a tree structure, r=yzen